# ResToC

./: .gitignore  LICENSE  README.md  generated_resources.c  generated_resources.h  resources_config.json  restoc.py  restoc_embed.py  restoc_gen.py
example/: CMakeLists.txt  main.c  resources_config.json
